[gd_scene load_steps=4 format=3 uid="uid://dr0wsyro7t0sa"]

[ext_resource type="PackedScene" uid="uid://ch31885t7hhct" path="res://Scenes/Overworld.tscn" id="1_wbfu4"]
[ext_resource type="Script" uid="uid://byhfmb0jt8rte" path="res://Game.gd" id="1_xkndl"]
[ext_resource type="AudioStream" uid="uid://dfd3wyt7nw5c7" path="res://Assets/Audio/battle_triggersfx.wav" id="3_u44n3"]

[node name="Game" type="Node2D"]
script = ExtResource("1_xkndl")

[node name="BattleTriggerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_u44n3")
volume_db = -10.0
pitch_scale = 1.25

[node name="Overworld" parent="." instance=ExtResource("1_wbfu4")]

[node name="CanvasLayer0" type="CanvasLayer" parent="."]

[connection signal="enemy_encountered" from="Overworld" to="." method="_on_overworld_enemy_encountered"]
[connection signal="tile_transition_entered" from="Overworld" to="." method="_on_overworld_tile_transition_entered"]
